Created first version of the site

--- a/srv/index.html
+++ b/srv/index.html
@@ -1,29 +1,20 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>redbean</title>
-<link rel="stylesheet" href="redbean.css">
-<img src="/redbean.png" class="logo" width="84" height="84">
+<link rel="stylesheet" href="water.css">
+<title>ceon</title>
+<style>
+@font-face {
+   font-family: altedin;
+   src: url(altedin.woff);
+}
+.logo {
+   font-family: altedin;
+   text-align: center;
+   color: rgb(34, 31,32);
+   background-color: rgb(226, 193, 74);
+}
+</style>
+<h1 class="logo">Ceon</h1>
+<h2>Portable Data Pipelines</h2>
 
-<h2>
-  <big>redbean</big><br>
-  <small>distributable static web server</small>
-</h2>
-
-<p>
-  Here's what you need to know about redbean:
-
-<ul>
-<li>million qps on modern pc
-<li>container is executable zip file
-<li>userspace filesystem w/o syscall overhead
-<li>kernelspace zero-copy gzip encoded responses
-<li>executable runs on linux, bsd, mac, and windows
-</ul>
-
-<p>
-  redbean is based on <a href="https://justine.storage.googleapis.com/ape.html">αcτµαlly pδrταblε εxεcµταblε</a>
-  and <a href="https://github.com/jart/cosmopolitan">cosmopolitan</a>.
-  <br>
-  redbean is authored by Justine Tunney who's on
-  <a href="https://github.com/jart">GitHub</a> and
-  <a href="https://twitter.com/JustineTunney">Twitter</a>.
+<h3>Ceon Labs is working on portable data pipelines for managing real time world wide geographic data. By portable we mean portable between cloud providers, and we mean offline apps for field officers or private cloud infrastructure.</h3>
